test/bpmn/invalid/process-not-executable.bpmn
<bpmn:definitions id="test">
  <bpmn:process id="processNotExecutableTest" isExecutable="false" />
</bpmn:definitions>
